--- a/recipes/templates/recipes/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail.html
@@ -169,6 +169,7 @@
                 <form method="post" class="mb-2">
                     {% csrf_token %}
                     <div class="input-group">
+                        <span class="input-group-text">Przelicz na liczbę porcji:</span>
                         <input type="number" name="servings" min="1" max="20" class="form-control" 
                               placeholder="Liczba porcji" value="{{ servings|default:recipe.servings }}">
                         <button type="submit" class="btn btn-outline-primary">Przelicz</button>
