--- a/templates/base.html
+++ b/templates/base.html
@@ -94,6 +94,17 @@
                             <a href="{% url 'dashboard' %}" class="dashboard-button me-2">
                                 <i class="bi bi-speedometer2 me-1"></i>Panel
                             </a>
+                            
+                            <a href="{% url 'fridge:notifications_list' %}" class="btn btn-outline-light me-2 position-relative">
+                                <i class="bi bi-bell-fill"></i>
+                                {% if unread_notifications_count > 0 %}
+                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                    {{ unread_notifications_count }}
+                                    <span class="visually-hidden">nieprzeczytanych powiadomień</span>
+                                </span>
+                                {% endif %}
+                            </a>
+                            
                             {% if user.is_staff %}
                             <a class="btn btn-outline-danger me-2" href="{% url 'recipes:admin_pending_ingredients' %}">
                                 <i class="bi bi-tools me-1"></i> Panel Administratora
