--- a/fridge/templates/fridge/clean_expired_confirm.html
+++ b/fridge/templates/fridge/clean_expired_confirm.html
@@ -19,11 +19,9 @@
                         <h5>Lista przeterminowanych produktów ({{ expired_items|length }}):</h5>
                         <ul class="list-group">
                             {% for item in expired_items %}
-                            <li class="list-group-item">
-                                {{ item.ingredient.name }} - {{ item.amount }} {{ item.unit.symbol }}
-                                {% if item.expiry_date %}
-                                <span class="badge bg-danger">Przeterminowane od {{ item.expiry_date }}</span>
-                                {% endif %}
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                {{ item.ingredient.name }} - {{ item.get_amount_display }} {{ item.unit.symbol }}
+                                <span class="text-danger">{{ item.expiry_date|date:"d.m.Y" }}</span>
                             </li>
                             {% endfor %}
                         </ul>
